--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -4,6 +4,7 @@ gunicorn==20.0.4
 h11==0.9.0
 httptools==0.1.1
 pydantic==1.5.1
+SQLAlchemy==1.3.18
 starlette==0.13.4
 uvicorn==0.11.5
 uvloop==0.14.0
