Torna checksum unique

--- a/api/api/imagens/models/imagens.settings.json
+++ b/api/api/imagens/models/imagens.settings.json
@@ -16,7 +16,9 @@
       "type": "string"
     },
     "checksum": {
-      "type": "string"
+      "type": "string",
+      "unique": true,
+      "required": false
     }
   }
 }
