Add docker-compose commands

--- a/api/Makefile
+++ b/api/Makefile
@@ -1,2 +1,5 @@
-run-db:
-	docker run --name mocorona_psql -p 5432:5432 -e POSTGRES_DB=mocorona -e POSTGRES_PASSWORD=abc123 -d postgres
+compose-up:
+	docker-compose up --build
+
+compose-db:
+	docker-compose up -d mocorona-postgres
