--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - mocorona
     environment:
       - DB_HOST=mocorona_postgres
+      - GIN_MODE=release
 
 
   mocorona-postgres:
